Mejoras y estabildad...
Todas las pruebas exitosa por el momento.

Se eliminar la clase FiltroBusqueda.
Todo los select reciben un objecto de la lista que devuelven. 

Se eliminaron varios TODO.